alignment issues fixed!

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -349,6 +349,10 @@ img {
   font-weight: 400;
 }
 
+.section_2{
+  text-align: center;
+}
+
 
 .banner{
   background-image: url('../images/val21.jpg');
